--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="dlf_promenade_adress">3, Nelson Mandela Marg, Vasant Kunj malls, New Delhi</string>
     <string name="dlf_place_saket_mall">DLF Place Saket</string>
     <string name="dlf_place_saket_mall_address">No.A 4, District Center, Press Enclave Road, Saket, New Delhi</string>
+    <!-- Night Places information-->
     <string name="club_pangaea">Club Pangaea</string>
     <string name="club_pangaea_address">The Ashok, Lobby Level, 50B, Diplomatic Enclave, Chanakyapuri, South Delhi, 110021</string>
     <string name="comesum">Comesum</string>
@@ -41,5 +42,12 @@
     <string name="mocha_art_house_address">167, Ground Floor, DLF Promenade Mall, Vasant Kunj, New Delhi</string>
     <string name="blue_bar">Blue Bar</string>
     <string name="blue_bar_address">Taj Diplomatic Enclave, 2, Sardar Patel Marg, Diplomatic Enclave, New Delhi, Delhi 110021</string>
-    <!-- Night Places information-->
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="places">Places</string>
+    <string name="hotels">Hotels</string>
+    <string name="malls">Malls</string>
+    <string name="night_places">Night Places</string>
+
 </resources>
